--- a/survey.html
+++ b/survey.html
@@ -2,7 +2,7 @@
   <meta charset="ut-8"/>
   <head>
     <title>Survey Form</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="survey.css">
   </head>
   <body>
     <main>
